# lenet5-mnist

./: README.md  data.py  model.py  pyproject.toml  setup.cfg  train-lenet5-mnist
example/: README.md  run-inference.py
lenet5mnist/: data.py  model.py  setup.py  train-lenet5-mnist
src/lenet5mnist/: __init__.py  data.py  train_model.py
